// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex component should render as Flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<Flex
  display="flex"
>
  <div
    className="emotion-0"
  />
</Flex>
`;

exports[`Flex component should render centered Flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<Flex
  centered={true}
  display="flex"
>
  <div
    className="emotion-0"
  />
</Flex>
`;
